crates/cli/tests/snapshots/project_env__project_env_json_keeps_duplicate_warnings_on_stderr.snap
---
source: crates/cli/tests/project_env.rs
expression: "(output, env_after)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "{\"APP_URL\":\"https://acme.test\"}\n",
        stderr: "warning: generated Project env key `APP_URL` already exists outside the PV-managed block\n",
    },
    "APP_URL=https://user.test\nOTHER=value\n",
)
