crates/cli/tests/snapshots/project_env__project_env_json_previews_conflicting_keys_without_warnings.snap
---
source: crates/cli/tests/project_env.rs
expression: "(output, env_after)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "{\"APP_URL\":\"https://acme.test\"}\n",
        stderr: "",
    },
    "APP_URL=https://user.test\nOTHER=value\n",
)
