crates/cli/tests/snapshots/project_env__project_env_json_returns_empty_object_for_no_mappings.snap
---
source: crates/cli/tests/project_env.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "{}\n",
    stderr: "",
}
