crates/cli/tests/snapshots/project_env__project_env_renders_current_project_values_to_stdout.snap
---
source: crates/cli/tests/project_env.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "APP_ENV=local\nAPP_URL=https://acme.test\n",
    stderr: "",
}
