crates/cli/tests/snapshots/project_env__project_env_reports_config_errors_to_stderr.snap
---
source: crates/cli/tests/project_env.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: unknown Project config key `unexpected`\n",
}
