crates/cli/tests/snapshots/project_env__project_env_resolves_additional_hostname_and_resource_values.snap
---
source: crates/cli/tests/project_env.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "DATABASE_URL=mysql://app:app-secret@127.0.0.1:3306/acme_test_app\nDB_DATABASE=acme_test_app\nDB_HOST=127.0.0.1\nDB_PORT=3306\n",
    stderr: "",
}
