crates/cli/tests/snapshots/project_env__project_env_resolves_resource_only_slug_and_reads_configured_env_file.snap
---
source: crates/cli/tests/project_env.rs
expression: "(output, env_before)"
---
(
    RunOutput {
        exit_code: ExitCode(
            unix_exit_status(
                0,
            ),
        ),
        stdout: "APP_NAME=resource-project\n",
        stderr: "",
    },
    "USER_VALUE=kept\n",
)
